# papers

./: CHANGELOG.md  README.md  do.sh  justfile  papers.cabal
declarative-uis/: Main.hs  ui.hs
essence-of-dataflow-programming/: Main.hs
finite-state-machines/: Checkout.hs  ConsoleInput.hs  Main.hs  PaymentProvider.hs  Simple.hs
src/: TypeClassesWithFunctionalDependencies.hs
src/TypeClassesWithFunctionalDependencies/: Main.hs  README.md
type-classes-with-functional-dependencies/: Main.hs
