cabal-version:      2.4
name:               papers
version:            0

library type-classes-with-functional-dependencies
    build-depends:    base ^>=4.14.3.0
    exposed-modules:  Main
    default-language: Haskell2010
    hs-source-dirs:   type-classes-with-functional-dependencies

library finite-state-machines
    build-depends:    base ^>=4.14.3.0
                    , text ^>=1.2.4
    exposed-modules:  Main
                    , Checkout
                    , ConsoleInput
                    , PaymentProvider
                    , Simple
    default-language: Haskell2010
    hs-source-dirs:   finite-state-machines

