cabal-version:      3.0
name:               papers
version:            0

library type-classes-with-functional-dependencies
    build-depends:    base ^>=4.16.2.0
    exposed-modules:  Main
    default-language: Haskell2010
    hs-source-dirs:   type-classes-with-functional-dependencies

library finite-state-machines
    build-depends:    base ^>=4.16.2.0
                    , text ^>=1.2
    exposed-modules:  Main
                    , Checkout
                    , ConsoleInput
                    , PaymentProvider
                    , Simple
    default-language: Haskell2010
    hs-source-dirs:   finite-state-machines

library declarative-uis
    build-depends:    base ^>=4.16.2.0
                    , comonad
    exposed-modules:  Main
                    , UI
    default-language: Haskell2010
    hs-source-dirs:   declarative-uis


