cabal-version: 3.0
name:          papers
version:       0

common common
  default-extensions:
    BlockArguments
    ImportQualifiedPost
    LambdaCase

  build-depends:
    , base
    , containers
    , text

  default-language:   Haskell2010

library type-classes-with-functional-dependencies
  import:          common
  exposed-modules: Main
  hs-source-dirs:  type-classes-with-functional-dependencies

library finite-state-machines
  import:          common
  exposed-modules:
    Checkout
    ConsoleInput
    Main
    PaymentProvider
    Simple

  hs-source-dirs:  finite-state-machines

